--- a/bite.html
+++ b/bite.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/45a97fa8d2c78.js" data-cmp-host="a.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="0"></script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VD1HMSQY3W"></script>
 <script>
@@ -262,3 +263,4 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 
 </html>
+
